<resources>
    <string name="app_name">JetPackDemo</string>

    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="wechat">公众号</string>
    <string name="category">体系</string>
    <string name="project">项目</string>

    <string name="home_fragment">hello home fragment</string>
    <string name="nav_controller">Nav跳转</string>
    <string name="message_fragment">Hello message fragment</string>
    <string name="deep_link_fragment">Nav深度链接Uri</string>
    <string name="deep_link_notify">Nav深度链接Notify</string>
    <string name="back_to_target_fragment">返回指定fragment</string>
    <string name="target_fragment">跳转target fragment</string>
    <string name="mine_fragment">mine fragment</string>
    <string name="title_activity_drawerlayout">DrawerlayoutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">登录</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_user_pwd">请输入密码</string>

</resources>
