<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/tab_home"
        android:title="@string/home" />

    <item
        android:id="@+id/squareFragment"
        android:icon="@drawable/tab_square"
        android:title="@string/square" />

    <item
        android:id="@+id/wechatFragment"
        android:icon="@drawable/tab_wechat"
        android:title="@string/wechat" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/tab_category"
        android:title="@string/category" />

    <item
        android:id="@+id/projectFragment"
        android:icon="@drawable/tab_project"
        android:title="@string/project" />

</menu>