<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ibenew.jetpack.navigation.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/squareFragment"
        android:name="com.ibenew.jetpack.navigation.SquareFragment"
        android:label="@string/square"
        tools:layout="@layout/fragment_square">

        <!--        <argument-->
        <!--            android:name="param1"-->
        <!--            app:argType="string" />-->
        <!--        <argument-->
        <!--            android:name="param2"-->
        <!--            android:defaultValue="false"-->
        <!--            app:argType="boolean" />-->

        <!--        <action-->
        <!--            android:id="@+id/action_messageFragment_to_backToTargetFragment"-->
        <!--            app:destination="@id/backToTargetFragment" />-->

    </fragment>

    <fragment
        android:id="@+id/wechatFragment"
        android:name="com.ibenew.jetpack.navigation.WechatFragment"
        android:label="@string/wechat"
        tools:layout="@layout/fragment_wechat">

    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.ibenew.jetpack.navigation.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category">

    </fragment>


    <fragment
        android:id="@+id/projectFragment"
        android:name="com.ibenew.jetpack.navigation.ProjectFragment"
        android:label="@string/project"
        tools:layout="@layout/fragment_project">

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.ibenew.jetpack.navigation.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

    </fragment>

</navigation>