<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <!--注入ViewMode-->
        <variable
            name="vm"
            type="com.ibenew.jetpack.viewmodel.LoginViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/hint_user_name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@={vm.mUserName}"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/hint_user_pwd"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@={vm.mPassword}"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_btn_eable"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:onClick="@{() -> vm.login()}"
            android:enabled="@{vm.mPassword.length() > 0 &amp;&amp; vm.mUserName.length() > 0}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_pwd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>